# squarewheel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: sw.hpp
include/squarewheel/: bitmap.h  common.h  index.h  printable.h  vec.h
include/squarewheel/algs/: vec.h
include/squarewheel/asyncuv/: error.h  loop.h
tests/: CMakeLists.txt  coro.cpp  main.cpp  simple_bitmap.cpp
